# Hackathon2025

./: package-lock.json  package.json  tsconfig.json
backend/git-mcp-agent/: .env.example  agent.py  cli.py  mcp_client.py  pyproject.toml  server.py
backend/supervisor-agent/: a2a_protocol.py  agent_registry.py  agents.yaml  agents_dynamic.yaml  api_server.py  client.py  pyproject.toml  start_api.py  start_api.sh  supervisor_agent.py  supervisor_agent.py.backup  supervisor_cli.py  test_agent_discovery.py
backend/supervisor-agent/bedrock_agent/: __init__.py  client.py
media/: chat.css  chat.html  chat.js
server/: server.js
src/: extension.ts  panel.ts
